--- a/firstUI.ui
+++ b/firstUI.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>603</width>
-    <height>441</height>
+    <width>670</width>
+    <height>567</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,8 +17,8 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>140</x>
-      <y>150</y>
+      <x>340</x>
+      <y>100</y>
       <width>113</width>
       <height>32</height>
      </rect>
@@ -76,8 +76,8 @@
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>150</y>
+      <x>470</x>
+      <y>100</y>
       <width>91</width>
       <height>31</height>
      </rect>
@@ -86,13 +86,38 @@
      <string>stop</string>
     </property>
    </widget>
+   <widget class="QListWidget" name="listWidget">
+    <property name="geometry">
+     <rect>
+      <x>60</x>
+      <y>200</y>
+      <width>561</width>
+      <height>301</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>16</pointsize>
+     </font>
+    </property>
+    <item>
+     <property name="text">
+      <string>moviename1</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>moviename2</string>
+     </property>
+    </item>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>603</width>
+     <width>670</width>
      <height>23</height>
     </rect>
    </property>
